# treasurr

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
tests/: test_admin_bulk.py  test_api.py  test_branding.py  test_dashboard.py  test_db.py  test_deletion.py  test_enforcement.py  test_external_api.py  test_plank.py  test_promotion.py  test_quota.py  test_retention.py  test_settings.py  test_split_promotion.py  test_tag_sync.py
treasurr/: __init__.py  __main__.py  app.py  config.py  db.py  email.py  email_templates.py  models.py
treasurr/api/: admin.py  auth.py  external.py  sse.py  treasure.py  webhook.py
treasurr/engine/: alerts.py  deletion.py  enforcement.py  plank.py  promotion.py  quota.py  retention.py
treasurr/frontend/: admin.html  index.html
treasurr/sync/: clients.py  plank_collection.py  queue_sync.py  request_sync.py  scheduler.py  size_sync.py  tag_sync.py  watch_sync.py
