[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "treasurr"
version = "0.3.0"
description = "Your treasure. Your crew. Your plunder. — Plex storage quota manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.21.0",
    "aiosmtplib>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["treasurr"]
